[project]
name = "muse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aria2p>=0.12.1",
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "themoviedb>=1.0.2",
]
